Added gamma for P2

--- a/final/Final Project.html
+++ b/final/Final Project.html
@@ -11836,7 +11836,7 @@ where
 <p>This should be easily adapted to the language of your choosing.</p>
 <p>Using</p>
 <p>\begin{align*}
-\alpha = 0.3, \quad \beta = 1, \quad I_a = 0, \quad \epsilon = 0.001,
+\alpha = 0.3, \quad \beta = 1, \quad \gamma = 1, \quad I_a = 0, \quad \epsilon = 0.001,
 \end{align*}</p>
 <p>with initial data</p>
 <p>\begin{align*}
