Fixed pdf output

--- a/final/Final Project.html
+++ b/final/Final Project.html
@@ -11843,14 +11843,16 @@ where
 v(0) = v_0, \quad w(0) = 0,
 \end{align*}</p>
 <p>the solution of the ODE system exhibits two distinct behaviors:</p>
-<ol>
+<ul>
 <li><p>If $v_0 = 0.31$ then $v(t)$ rapdily rises near $v = 1$ and then decays to the stable steady state $v = w = 0$.</p>
 </li>
 <li><p>If $v_0 = 0.29$ the the solution decays directly to the steady state $v = w = 0$.</p>
 </li>
-</ol>
+</ul>
 <p>Plot these two solutions. Numerically, verify that your method is second-order accurate at $t = 0.25$ when $v_0 = 0.29$.</p>
-<p>Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ until $t = 10$.</p>
+<ul>
+<li>Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ until $t = 10$.</li>
+</ul>
 
 </div>
 </div>
