Keep the other parameters the same

--- a/final/Final Project.html
+++ b/final/Final Project.html
@@ -11851,7 +11851,7 @@ v(0) = v_0, \quad w(0) = 0,
 </ul>
 <p>Plot these two solutions. Numerically, verify that your method is second-order accurate at $t = 0.25$ when $v_0 = 0.29$.</p>
 <ul>
-<li>Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ until $t = 10$.</li>
+<li>Lastly, change $I_a = 0.2$ and plot the solution with $v_0 = 0$ until $t = 10$.  Keep the other parameters the same.</li>
 </ul>
 
 </div>
