--- a/final/Final Project.html
+++ b/final/Final Project.html
@@ -11865,7 +11865,7 @@ v(0) = v_0, \quad w(0) = 0,
 <p>\begin{align*}
     v_t = \kappa v_{xx}, \quad t &gt; 0,\quad x \in (a,b).
 \end{align*}</p>
-<p>We impose Neumann boundary conditions $v_x(0,t) = 0 = v_x(1,t)$.  Because the boundary conditions do not directly specify $v(0,t)$ and $v(1,t)$, we need to include their approximations in our vector of unkowns.  The MOL discretization can be written</p>
+<p>We impose Neumann boundary conditions $v_x(a,t) = 0 = v_x(b,t)$.  Because the boundary conditions do not directly specify $v(a,t)$ and $v(b,t)$, we need to include their approximations in our vector of unkowns.  The MOL discretization can be written</p>
 <p>\begin{align*}
 V'(t) = \frac{\kappa}{h^2} A V(t).
 \end{align*}</p>
